--- a/packages/gatsby-plugin-stylus/package.json
+++ b/packages/gatsby-plugin-stylus/package.json
@@ -4,8 +4,8 @@
   "version": "1.1.4",
   "author": "Ian Sinnott <ian@iansinnott.com>",
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-runtime": "6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "webpack1"
